Manual de Usuario Latex

--- a/Sudoku/manual de usuario.tex
+++ b/Sudoku/manual de usuario.tex
@@ -42,7 +42,7 @@ Guayaquil - \today
 \endgroup
 \end{minipage}
 \begin{minipage}{0.1\textwidth}
-\includegraphics[height=6cm,width=8cm]{sudoku} 
+\includegraphics[height=6cm,width=8cm]{logo} 
 
 
 \end{minipage}
@@ -55,7 +55,7 @@ Guayaquil - \today
 
 Sudoku es un pasatiempo que se publicó por primera vez a finales de la década de 1970 y se popularizó en Japón en 1986, dándose a conocer en el ámbito internacional en 2005 cuando numerosos periódicos empezaron a publicarlo en su sección de pasatiempos. El objetivo del sudoku es rellenar una cuadrícula de 9 x 9 celdas (81 casillas) dividida en subcuadrículas de 3 x 3 (también llamadas "cajas" o "regiones") con las cifras del 1 al 9 partiendo de algunos números ya dispuestos en algunas de las celdas, y lo característico del juego es llenar las casillas vacías con números que no se  repitan en una misma fila, columna o subcuadrícula. \\\\
 \begin{center}
-		\includegraphics[height=8cm,width=10cm]{sdk.png}
+		\includegraphics[height=9cm,width=7cm]{dificil.jpg}
 	\end{center}
 	
 	
@@ -66,39 +66,73 @@ Sudoku es un pasatiempo que se publicó por primera vez a finales de la década 
 \section{Recorriendo Sudoku JCK}
 
 	Nuestro Sudoku muestra en primera instacia la siguiente ventana:
+
 	\begin{center}
-		\includegraphics[height=6cm,width=8cm]{ventana_principal.png}
+		\includegraphics[height=6cm,width=8cm]{principal.jpg}
 	\end{center}
 
 	\subsection{Iniciar Partida}
-		Esta opcion dará inicio a la partida correspondiente a jugar.
+		Esta opcion dará inicio a la partida correspondiente a jugar mostrando la siguiente venta que será la elección del respectivo nivel.
+
+	\begin{center}
+		\includegraphics[height=5cm,width=4cm]{jugar.jpg}
+	\end{center}
+
 
 	\subsection{Estadísticas}
-		Esta opción mostrará el ranking de los jugadores de mejor puntaje en el Sudoku.
+		Mostrará una ventana con los rankins de los mejores jugadores que hayan ganado una partida de sudoku.
+
+	\begin{center}
+		\includegraphics[height=5cm,width=4cm]{estadisticas.jpg}
+	\end{center}
 
 	\subsection{Ayuda}
-		Aquí se mostrará las reglas y controles necesarios del Sudoku.
+		Se mostrará una ventana con una introduccion del juego y las reglas respectivas del mismo.
+
+	\begin{center}
+		\includegraphics[height=5cm,width=4cm]{ayuda.jpg}
+	\end{center}
 
 	\subsection{Acerca De}
-		En esta opción corresponde a la información intelectual del juego.
+		Se mostrara una ventana con las referencias del juego y los nombres de sus desarrolladores.
+
+	\begin{center}
+		\includegraphics[height=5cm,width=4cm]{acercade.jpg}
+	\end{center}
 
 	\subsection{Salir}
-		Como su nombre lo indica, cerrará la aplición.
+		Mostrará una ventana solicitando la confirmación de salida al usuario.
 
 \section{Recorriendo el Juego.}
 	Al haber escogido la opción 'Iniciar Partida', la siguiente ventana de niveles se despliega:
 		\begin{center}
-			\includegraphics[height=6cm,width=8cm]{ventana_niveles.png}
+			\includegraphics[height=5cm,width=7cm]{jugar.jpg}
 		\end{center}
 	La dificultad se basa en restar la cantidad de números al tablero, la cantidad de casillas blancas son:
-		\\Facil   - 
-		\\Medio - 
-		\\Dificil  - 
-		\\Tambien se muestra la opcion 'Cargar Partida' la cual muestra una partida guardada previamente.	
-		\\\\Una vez escogido el nivel, aparecerá la ventana del sudoku lista para ser jugada:
+		Facil   - 27 casillas vacias.
+
 		\begin{center}
-			\includegraphics[height=6cm,width=8cm]{ventana_sudoku.png}
+			\includegraphics[height=5cm,width=4cm]{facil.jpg}
 		\end{center}
+
+		Medio - 41 casillas vacias.
+
+		\begin{center}
+			\includegraphics[height=5cm,width=4cm]{normal.jpg}
+		\end{center}
+
+		Dificil  - 48 casillas vacias.
+
+		\begin{center}
+			\includegraphics[height=5cm,width=4cm]{dificil.jpg}
+		\end{center}
+
+		Tambien se muestra la opcion 'Cargar Partida' la cual muestra una partida guardada previamente.	
+		Una vez escogido el nivel, aparecerá la ventana del sudoku lista para ser jugada como se muestra en las figuras anteriores.
+
+		
+		
+		
 
 
 
